test/samples/invalid/resolving/non_primitive_arg.maruir
fun foo(t: u8[]) { }
